gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23022.d
version https://git-lfs.github.com/spec/v1
oid sha256:55892aa7c59ecc2d780dc4431fa1fde0ae5da0e311af1232c204fc6def507015
size 288
